compiler/testData/diagnostics/tests/inference/kt46515.kt
// FIR_IDENTICAL
// WITH_STDLIB

fun bar() {
    listOf(1, 2, 3).<!OVERLOAD_RESOLUTION_AMBIGUITY!>maxOf<!> { <!UNRESOLVED_REFERENCE!>foo<!> }
}